--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <%= render 'shared/nav' %>
     <main class="container mx-auto mt-28 px-5 flex">
       <%= yield %>
     </main>
