--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,7 +1,14 @@
 <% if user_signed_in? %>
-  <%= link_to  "New Article", new_article_path %> | 
+  <%= link_to  "New Article", new_article_path %> |
   <%= link_to  "Logout", destroy_user_session_path, data: { turbo_method: :delete } %> |
+  <%= form_with url: search_path, method: :get do |form| %>
+    <%= form.label :query, 'Pesquisar - ' %>
+    <%= form.text_field :query, placeholder: 'somebody@.....' %>
+    <%= form.submit "Pesquisar"%>
+  <% end %>
+  <%= button_to 'Zerar pesquisa', root_path, method: :get %>
   <%= current_user.email %>
+
 <% else %>
   <%= link_to  "Login", new_user_session_path %>
 <% end %>
