--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -2,11 +2,7 @@
   <% @users.each do |user| %>
     <p>
       <%= user.email %> |
-      <% if user.followers.include?(current_user) %>
-        <%= link_to "Unfollow", unfollow_path(user_id: user.id), data: { turbo_method: :delete } %>
-      <% else %>
-        <%= link_to "Follow", follow_path(user_id: user.id), data: { turbo_method: :post } %>
-      <% end %>
+      <%= render  "users/follow_unfollow_link", target_user: user %>
     </p>
   <% end %>
 </div>
