--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,8 +1,28 @@
 <div>
-  <% @users.each do |user| %>
-    <p>
-      <%= user.email %> |
-      <%= render  "users/follow_unfollow_link", target_user: user %>
-    </p>
-  <% end %>
+  <div class="relative overflow-x-auto">
+    <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+      <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+        <tr>
+          <th scope="col" class="px-6 py-3">
+            User
+          </th>
+          <th scope="col" class="px-6 py-3">
+            Follow/Unfollow
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @users.each do |user| %>
+          <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+            <td scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+              <%= user.email %>
+            </td>
+            <td class="px-6 py-4">
+              <%= render  "users/follow_unfollow_link", target_user: user %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
 </div>
