--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? %>
-  <%= link_to  "New Article", new_article_path %> |
+  <%= link_to  "New Article", new_article_path, data: { turbo_prefetch: false } %> |
   <%= link_to  "Logout", destroy_user_session_path, data: { turbo_method: :delete } %> |
   <%= form_with url: search_path, method: :get do |form| %>
     <%= form.label :query, 'Pesquisar - ' %>
