Create migration at Chat Messages

--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -5,6 +5,7 @@
     <% end %>
 
     <%= render @chat %>
+    <%= render  "chat_messages/index" %>
     <%= link_to "Back to chats", chats_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
   </div>
 </div>
