--- a/app/views/chat_messages/_form.html.erb
+++ b/app/views/chat_messages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: chat_message, class: "contents") do |form| %>
+<%= form_with(model: chat_message) do |form| %>
   <% if chat_message.errors.any? %>
     <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
       <h2><%= pluralize(chat_message.errors.count, "error") %> prohibited this chat_message from being saved:</h2>
@@ -11,15 +11,7 @@
     </div>
   <% end %>
 
-  <div class="my-5">
-    <%= form.label :chats_id %>
-    <%= form.text_field :chats_id, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
-  </div>
-
-  <div class="my-5">
-    <%= form.label :user_send_message_id %>
-    <%= form.text_field :user_send_message_id, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
-  </div>
+  <%= form.hidden_field :chat_id, value: chat_message.chat_id %>
 
   <div class="my-5">
     <%= form.label :message %>
