--- a/app/views/chats/_chat.html.erb
+++ b/app/views/chats/_chat.html.erb
@@ -1,17 +1,11 @@
 <div id="<%= dom_id chat %>">
   <p class="my-5">
-    <strong class="block font-medium mb-1">User opening chat:</strong>
-    <%= chat.user_opening_chat_id %>
-  </p>
-
-  <p class="my-5">
     <strong class="block font-medium mb-1">User destination chat:</strong>
-    <%= chat.user_destination_chat_id %>
+    <%= @other_user.email %>
   </p>
 
   <% if action_name != "show" %>
     <%= link_to "Show this chat", chat, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <%= link_to "Edit this chat", edit_chat_path(chat), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
     <hr class="mt-6">
   <% end %>
 </div>
