--- a/app/views/chats/_chat.html.erb
+++ b/app/views/chats/_chat.html.erb
@@ -1,3 +1,6 @@
+<span id="current_user_id", style="display: none;">
+  <%= current_user.id %>
+</span>
 <div id="<%= dom_id chat %>">
   <p class="my-5">
     <strong class="block font-medium mb-1">User destination chat:</strong>
