--- a/app/views/chats/_chat.html.erb
+++ b/app/views/chats/_chat.html.erb
@@ -3,7 +3,6 @@
 </span>
 <div id="<%= dom_id chat %>">
   <p class="my-5">
-    <strong class="block font-medium mb-1">User destination chat:</strong>
-    <%= @other_user.email %>
+    <strong class="block font-medium mb-1">User destination chat: <%= @other_user.email %></strong>
   </p>
 </div>
