Refact Load More Message

--- a/app/views/chat_messages/load_more_messages.turbo_stream.erb
+++ b/app/views/chat_messages/load_more_messages.turbo_stream.erb
@@ -7,7 +7,15 @@
     <%= render "chat_messages/chat_message", chat_message: chat_message, justify_position: justify_position, text_align: text_align %>
   <% end %>
 
-  <%= link_to  "More messages...", load_more_messages_path(chat_id: @chat.id, number_messages_loaded: @number_messages_loaded + 3), id: "link_load_more", data: { turbo_method: :put }, class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
+  <% if @chat.chat_messages.length > @number_messages_loaded %>
+    <%= link_to  "More messages...", load_more_messages_path(chat_id: @chat.id, number_messages_loaded: @number_messages_loaded + 3), id: "link_load_more", data: { turbo_method: :put }, class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
+  <% else %>
+    <script>
+      alert("NÃO HÁ MAIS MENSAGENS A CARREGAR")
+    </script>
+  <% end %>
 <% end %>
+
+
 
 
