--- a/app/views/chat_messages/_form.html.erb
+++ b/app/views/chat_messages/_form.html.erb
@@ -16,11 +16,7 @@
   <%= form.label :message %>
 
   <div class="my-5 flex flex-auto">
-    <%= form.text_field :message, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.text_field :message, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full", id: "form_message" %>
     <%= form.submit "⮚", class: "rounded-lg py-3 px-5 mt-2 ml-2 bg-blue-600 text-white flex items-center font-medium cursor-pointer" %>
-  </div>
-
-
-  <div class="inline" >
   </div>
 <% end %>
