Add mask to cpf on user registration

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -44,7 +44,7 @@
         .....
       </span>
       <br />
-      <%= f.text_field :cpf, data: { action: 'input->cpf-field#fetch_input' } %>
+      <%= f.text_field :cpf, data: { action: 'input->cpf-field#fetch_input' }, maxlength: 11 %>
     </span>
   </div>
 
