--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -17,14 +17,13 @@
             <%= link_to  "New Article", new_article_path, data: { turbo_prefetch: false }, class: "block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700" %>
           </li>
           <li>
-            <%= link_to  "Chats", chats_path, data: { turbo_prefetch: false }, class: "block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700" %>
-          </li>
-          <li>
-            <%= form_with url: search_path, method: :get do |form| %>
-              <%= form.label :query, 'Search:' %>
-              <%= form.text_field :query, placeholder: 'somebody@.....' %>
+            <%= form_with url: search_article_path, method: :get do |form| %>
+              <%= form.text_field :query, placeholder: 'Title and Content Article.....' %>
               <%= form.submit "🔍" %>
             <% end %>
+          </li>
+          <li>
+            <%= link_to  "Chats", chats_path, data: { turbo_prefetch: false }, class: "block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700" %>
           </li>
           <li style="display: flex; justify-content: right; min-width: 300px;">
             <div style="width: 30px; height: 30px;">
@@ -37,6 +36,12 @@
                 </svg>
               </button>
             <% end %>
+          <li>
+            <%= form_with url: search_user_path, method: :get do |form| %>
+              <%= form.text_field :query, placeholder: 'somebody@.....' %>
+              <%= form.submit "🔍" %>
+            <% end %>
+          </li>
 
             <div id="dropdownNavbar" class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
               <div class="py-1">
