FEAT-Search articles using title or content at parameter

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -38,8 +38,7 @@
             <% end %>
           <li>
             <%= form_with url: search_user_path, method: :get do |form| %>
-              <%= form.text_field :query, placeholder: 'somebody@.....' %>
-              <%= form.submit "🔍" %>
+              <%= form.text_field :query, placeholder: 'somebody@.....' %> 🔍
             <% end %>
           </li>
 
